Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -36,38 +36,112 @@
         importante para elas.
       </p>
     </section>
-    <section class="metricas-container">
-      <div>400+</div>
-      <div>100+</div>
-      <div>20k</div>
-      <div>500+</div>
+
+    <section class="metrics">
+      <div class="metric">
+        <h1>400+</h1>
+        <span class="metric-title">Projetos concluídos</span>
+        <span>Nós ajudamos a construir mais de 400 projetos incríveis.</span>
+      </div>
+      <div class="metric">
+        <h1>100+</h1>
+        <span class="metric-title">Colaboradores</span>
+        <span
+          >Temos mais de 100 colaboradores no nosso time que se preocupam com
+          nossos clientes.</span
+        >
+      </div>
+      <div class="metric">
+        <h1>20k</h1>
+        <span class="metric-title">Downloads</span>
+        <span
+          >Nossos projetos que estão disponíveis em lojas já foram baixados mais
+          de 20.000 vezes.</span
+        >
+      </div>
+      <div class="metric">
+        <h1>500+</h1>
+        <span class="metric-title">Reviews 5 estrelas</span>
+        <span
+          >Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em
+          nossos produtos.</span
+        >
+      </div>
     </section>
-    <section class="intertitulo">
-      <h3>Projetos concluídos</h3>
-      <h3>Colaboradores</h3>
-      <h3>Downloads</h3>
-      <h3>Review 5 estrelas+</h3>
-    </section>
-    <section class="paragrafos">
-      <p>Nós ajudamos a construir mais de 400 projetos incríveis.</p>
-      <p>
-        Temos mais de 100 colaboradores no nosso time que se preocupam com
-        nossos clientes.
-      </p>
-      <p>
-        Nossos projetos que estão disponíveis em lojas já foram baixados mais de
-        20.000 vezes.
-      </p>
-      <p>
-        Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em
-        nossos produtos.
-      </p>
-    </section>
-    <section class="vagas-abertas">
+
+    <section class="talents">
       <span>Vagas abertas!</span>
       <h2>Estamos procurando por talentos</h2>
       <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
-      <img src="assets/Image.png"
+      <img src="assets/Image.png" alt="Nosso time" />
     </section>
+
+    <section class="vagas-abertas">
+      <span class="area-principal">Design</span>
+
+      <div class="vaga">
+        <span class="titulo-vaga">Product Designer</span>
+        <div class="informacoes">
+          <span>Full-time</span>
+          <span>Faixa salarial: R$7.000</span>
+        </div>
+      </div>
+
+      <div class="vaga">
+        <span class="titulo-vaga">UX Designer</span>
+        <div class="informacoes">
+          <span>Full-time</span>
+          <span>Faixa salarial: R$6.000</span>
+        </div>
+      </div>
+
+      <span class="area-principal">Desenvolvimento de Software</span>
+
+      <div class="vaga">
+        <span class="titulo-vaga">Desenvolvedor(a) iOS Pleno</span>
+        <div class="informacoes">
+          <span>Full-time</span>
+          <span>Faixa salarial: R$8.000</span>
+        </div>
+      </div>
+
+      <div class="vaga">
+        <span class="titulo-vaga">Desenvolvedor(a) Front-end Júnior</span>
+        <div class="informacoes">
+          <span>Full-time</span>
+          <span>Faixa salarial: R$3.500</span>
+        </div>
+      </div>
+
+      <div class="vaga">
+        <span class="titulo-vaga">Desenvolvedor(a) Back-end</span>
+        <div class="informacoes">
+          <span>Estágio</span>
+          <span>Faixa salarial: R$2.000</span>
+        </div>
+      </div>
+    </section>
+
+    <section class="depoimento">
+      <span>Veja o que nossos colaboradores falam sobre nós</span>
+      <h2>
+        OptimusTech se importa com todos seus colaboradores, sempre procurando
+        nos dar todo tipo de auxílio possível.
+      </h2>
+      <img src="assets/avatar.png" />
+      <span class="nome">Júlia Castro</span>
+      <span class="cargo">Desenvolvedora Web</span>
+    </section>
+
+    <footer>
+      <h2>Acompanhe as nossas oportunidades</h2>
+      <span>Seja o primeiro a saber quando novas vagas serão abertas!</span>
+      <form>
+        <input type="email" placeholder="Seu e-mail" />
+        <button class="signUp">Cadastrar</button>
+      </form>
+      <span>© 2022 OptimusTech. Todos os direitos reservados.</span>
+    </footer>
+    <script src="index.js"></script>
   </body>
 </html>
